# github-trends-scraper

./: Cargo.toml  README.md
src/: cli.rs  handlers.rs  main.rs  models.rs  scraper.rs  utils.rs
